--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,20 @@
 <head>
 <meta charset="utf-8">
 </head>
-
 <body>
   <p>Welcome to the chat app</p>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+
+    socket.on('connect',()=>{
+      console.log('Connected to Server');
+    });
+
+    socket.on('disconnect',()=>{
+      console.log('Disconnected from the server');
+    });
+  </script>
 </body>
 </html>
